<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SchoolInfoActivity">

    <TextView
        android:id="@+id/school_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="School Name"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#000"
        android:textSize="25sp"
        android:layout_margin="10dp"/>

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="8"
        android:columnCount="2"
        android:layout_below="@id/school_name"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:padding="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/sat_total_test_takers"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/reading_average_score"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/math_average_score"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/writing_average_score"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/sat_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_margin="10dp"
            tools:text="200"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:id="@+id/math_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/writing_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/reading_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:layout_margin="10dp"
            />


    </GridLayout>

    <TextView
        android:id="@+id/noData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/grid"
        android:layout_marginTop="30dp"
        android:text="@string/no_data_found"
        android:textSize="30sp"
        android:visibility="gone"
        android:textColor="@color/black"/>


</RelativeLayout>